Avoid margin on smaller slide

--- a/_extensions/key-resources/global.scss
+++ b/_extensions/key-resources/global.scss
@@ -36,6 +36,10 @@ $presentation-font-size-root: 36px;
   max-height: 2rem !important;
 }
 
+.smaller {
+  margin-left: 0px !important;
+}
+
 .underline {
   border-bottom: 2px solid;
 }
